Checkin for CR #2428 code hardening and PMD warnings (mostly PMD)
git-svn-id: svn://source.pentaho.org/svnkettleroot/mirror/Kettle/trunk@1129 5fb7f6ec-07c1-534a-b4ca-9155e429e800